@@ -1,5 +1,7 @@
 2006-11-14  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/libmunge/munge.h: Tweaked comments.
+
 	* src/munged/cipher.c (HAVE_OPENSSL:_cipher_map_enum),
 	  src/libmunge/enum.c: Made AES-256 support dependent upon SHA-256
 	  since the 256-bit cipher key length can currently only be satisfied
